--- a/index.html
+++ b/index.html
@@ -18,13 +18,26 @@
       --radius:18px;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
+    html,body{
       margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
-      background: radial-gradient(1200px 600px at 10% -10%, #162048 0, transparent 60%),
-                  radial-gradient(1000px 500px at 110% 10%, #1a2b55 0, transparent 60%),
-                  var(--bg);
       color:var(--text);
+      min-height:100svh; /* asegura cubrir alto de pantalla en móviles */
+      background-color: var(--bg);
+      background:
+        radial-gradient(1400px 900px at 10% -10%, #162048 0, transparent 60%),
+        radial-gradient(1400px 900px at 110% 10%, #1a2b55 0, transparent 60%),
+        linear-gradient(180deg, #0b1020 0%, #0b1020 60%, #0a0e1c 100%);
+      background-attachment: fixed, fixed, fixed; /* que las capas cubran aunque scrollées */
+      background-repeat: no-repeat;
+      background-size: cover, cover, cover;
+    }
+    /* Capa adicional por si el contenido es muy largo: pinta el fondo detrás de todo */
+    body::before{
+      content:""; position:fixed; inset:0; z-index:-1; pointer-events:none;
+      background:
+        radial-gradient(1600px 1100px at -20% -10%, #13204455 0, transparent 65%),
+        radial-gradient(1600px 1100px at 120% 0%, #1a2b5555 0, transparent 65%);
+      background-repeat:no-repeat;
     }
     header{position:sticky; top:0; z-index:10; backdrop-filter:saturate(120%) blur(6px);
       background:linear-gradient(180deg,rgba(11,16,32,.8),rgba(11,16,32,.4)); border-bottom:1px solid rgba(255,255,255,.06)}
